# aioduckdb

./: pyproject.toml
aioduckdb/: __init__.py  core.py  cursor.py  relation.py  result.py
aioduckdb/tests/: arrow.py  relations.py  smoke.py  test_parquet.py
