[project]
name = "aioduckdb"
description = "Asyncio wrapper for DuckDB Python API"
readme = "README.md"
requires-python = ">=3.7"
repository = "https://github.com/NickCrews/aioduckdb"
keywords = ["duckdb", "asyncio"]
authors = [
  { name = "Nick Crews", email = "nicholas.b.crews@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
    "duckdb",
    "typing_extensions >= 4.0; python_version < '3.8'",
]
dynamic = ["version"]

[tool.hatch.version]
path = "aioduckdb/__version__.py"

[tool.hatch.envs.default]
dependencies = [
      # development tools
  "black[jupyter]",
  "pandas",
  "pytest",
]
[tool.hatch.envs.default.scripts]
fmt = [
  "black .",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.coverage.run]
branch = true
include = ["aioduckdb/*"]
omit = ["aioduckdb/tests/*"]

[tool.coverage.report]
fail_under = 75
precision = 1
show_missing = true
skip_covered = true

[tool.isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = false
include_trailing_comma = true
use_parentheses = true
